试探性地修改一些内容

--- a/src/main/resources/assets/yetanotherzombieenhancement/lang/en_us.json
+++ b/src/main/resources/assets/yetanotherzombieenhancement/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.yetanotherzombieenhancement": "Example Mod Tab",
+  "itemGroup.yetanotherzombieenhancement": "Yet Another Zombie Enhancement",
   "block.yetanotherzombieenhancement.example_block": "Example Block",
   "item.yetanotherzombieenhancement.example_item": "Example Item",
 
